@@ -238,6 +238,7 @@ dnl HAVE_INET_NTOP, HAVE_NETINET_IN_H, HAVE_ARPA_INET_H, RET_INET_ADDR_TYPE,
 dnl INET_ADDR_SUFFIX, INET_ADDR_CONST, HAVE_NETINET_TCP_H, SETSOCKOPT_CONST,
 dnl SETSOCKOPT_ARG_T, SETSOCKOPT_OPTLEN_T
 CL_TCPCONN
+AC_CHECK_FUNCS(getsockopt)
 dnl DEFS CODE_ADDRESS_RANGE, MALLOC_ADDRESS_RANGE, SHLIB_ADDRESS_RANGE,
 dnl STACK_ADDRESS_RANGE
 CL_ADDRESS_RANGE
